--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "gulp": "^4.0.2",
     "gulp-minify": "^3.1.0",
     "gulp-replace": "^1.0.0",
+    "gulp-zip": "^5.0.1",
     "prettier": "^1.18.2"
   }
 }
