--- a/src/manifest.json
+++ b/src/manifest.json
@@ -43,5 +43,6 @@
     "http://docs.microsoft.com/*",
     "http://github.com/MicrosoftDocs/*",
     "https://github.com/MicrosoftDocs/*"
-  ]
+  ],
+	"content_security_policy": "script-src 'self' https://www.google-analytics.com; object-src 'self'"
 }
