--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "spineedit",
   "version": "1.1.0",
   "devDependencies": {
+    "eslint": "^6.8.0",
     "gulp": "^4.0.2",
     "gulp-minify": "^3.1.0",
     "gulp-replace": "^1.0.0",
