--- a/src/manifest.json
+++ b/src/manifest.json
@@ -32,12 +32,7 @@
         "http://github.com/issues/*",
         "https://github.com/issues/*"
       ],
-      "js": [
-        "content.js",
-        "docs.js",
-        "github.js",
-        "learn.js"
-      ],
+      "js": ["content.js", "docs.js", "github.js", "learn.js"],
       "run_at": "document_idle",
       "all_frames": false,
       "match_about_blank": false
