--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "spineedit",
   "version": "1.1.0",
   "scripts": {
-    "pretty": "pretty-quick"
+    "pretty": "pretty-quick",
+    "lint-fix": "eslint ./src --ext .js --fix"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
