Add support for editing Learn modules (#16)
* Add Learn modules editing
* Update readme with dev notes
* Code clean up
* Split logic into separate files

Co-authored-by: John Papa <john@johnpapa.net>

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,7 +10,7 @@
     "128": "/icons/icon128.png"
   },
   "background": {
-    "scripts": ["background.js"],
+    "scripts": ["background/ga.js", "background/listeners.js"],
     "persistent": false
   },
   "browser_action": {
@@ -25,14 +25,14 @@
   "content_scripts": [
     {
       "matches": [
-        "https://docs.microsoft.com/*", 
+        "https://docs.microsoft.com/*",
         "http://docs.microsoft.com/*",
         "http://github.com/MicrosoftDocs/*",
         "https://github.com/MicrosoftDocs/*",
         "http://github.com/issues/*",
         "https://github.com/issues/*"
       ],
-      "js": ["content.js"],
+      "js": ["content.js", "docs.js", "github.js", "learn.js"],
       "run_at": "document_idle",
       "all_frames": false,
       "match_about_blank": false
