--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "spineedit",
   "version": "1.1.0",
+  "scripts": {
+    "pretty": "pretty-quick",
+    "lint-fix": "eslint ./src --ext .js --fix"
+  },
   "devDependencies": {
+    "eslint": "^6.8.0",
     "gulp": "^4.0.2",
     "gulp-minify": "^3.1.0",
     "gulp-replace": "^1.0.0",
     "gulp-zip": "^5.0.1",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1"
   }
 }
