remove GitHub issues implementation

--- a/livewire.config.json
+++ b/livewire.config.json
@@ -2,7 +2,7 @@
   "title": "SpineEdit",
   "description": "The browser extension that fosters collaboration and makes it easy to edit Microsoft docs.",
   "videoUrl": "https://youtu.be/3YmhpujaTtY",
-  "categories": ["Docs maintenance", "GitHub PRs"],
+  "categories": ["Docs maintenance"],
   "languages": ["JavaScript", "HTML", "CSS"],
   "technologies": ["Browser Extension"]
 }
