--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "eslint": "^8.7.0",
+    "glob-parent": "^6.0.2",
     "gulp": "^4.0.2",
     "gulp-minify": "^3.1.0",
     "gulp-replace": "^1.0.0",
