Upgrade browser extension to use the latest programming model and APIs
Update the browser extension to use the latest browser extension programming model and APIs.

* **Manifest File**
  - Update `manifest_version` to 3.
  - Replace `background` property with `background.service_worker`.
  - Update `permissions` to include `scripting`.
  - Update `content_security_policy` to use `script-src 'self'`.

* **Content Scripts**
  - Add `chrome.runtime.onMessage.addListener` to `src/docs.js`, `src/github.js`, and `src/learn.js`.

* **Package Dependencies**
  - Update `eslint` to version `^8.32.0`.
  - Update `prettier` to version `^2.8.4`.
  - Update `pretty-quick` to version `^3.1.3`.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/craigshoemaker/spineedit?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,17 +3,16 @@
   "version": "3.05",
   "short_name": "SpineEdit - Edit Microsoft docs in the browser",
   "description": "When working with Microsoft docs in the browser, you can open an editor in the private repository for quick edits and collaboration.",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "icons": {
     "16": "/icons/icon16.png",
     "48": "/icons/icon48.png",
     "128": "/icons/icon128.png"
   },
   "background": {
-    "scripts": ["background/listeners.js"],
-    "persistent": false
+    "service_worker": "background/listeners.js"
   },
-  "browser_action": {
+  "action": {
     "default_icon": {
       "16": "/icons/icon16.png",
       "48": "/icons/icon48.png",
@@ -37,8 +36,11 @@
   "permissions": [
     "activeTab",
     "declarativeContent",
+    "scripting",
     "https://learn.microsoft.com/*",
     "http://learn.microsoft.com/*"
   ],
-  "content_security_policy": "script-src 'self' https://www.google-analytics.com; object-src 'self'"
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
+  }
 }
